package main.java.com.team1.exception;

public class RentIllegalUpdateException extends Exception {
    /**
     * Construtor para a exceção RentIllegalUpdateException.
     *
     * @param message A mensagem descritiva que detalha a causa da exceção.
     */
    public RentIllegalUpdateException(String message) {
        super(message);
    }
}
